--- a/src/routes/Game/routes/BoardPage/style.module.css
+++ b/src/routes/Game/routes/BoardPage/style.module.css
@@ -30,19 +30,19 @@
     background: none;
 }
 
-.card {
-    max-height: 14.8vw;
-    margin-top: -6vw;
-    height: 100%;
-}
 
-.card:first-child {
-    margin-top: 0;
-}
 .playerOne {
     position: absolute;
     top: 4.3vw;
     left: 5vw;
-    width: 250px;
+    width: 17vw;
+    height: 50.3vw;
+}
+
+.playerTwo {
+    position: absolute;
+    top: 4.3vw;
+    right: 5vw;
+    width: 17vw;
     height: 50.3vw;
 }
