--- a/src/components/PokemonCard/style.module.css
+++ b/src/components/PokemonCard/style.module.css
@@ -19,7 +19,9 @@
     transition: .6s .1s;
     transform: rotateY(180deg);
     height: -webkit-fill-available;
-    min-width: 100%;
+    width: 100%;
+    /* max-width: 16vw; */
+    height: 100%;
 }
 
 .pokemonCard.active {
