Login And Signup User

--- a/src/components/LoginForm/style.module.css
+++ b/src/components/LoginForm/style.module.css
@@ -1,10 +1,18 @@
-.labelRegister {
-    color: #f300b4;
+.flex {
+    display: flex;
+    align-items: center;
     font-size: 18px;
-    font-weight: normal;
-    position: absolute;
-    right: 50px;
-    top: 260px;
-    transition: 0.2s ease all;cursor: pointer;
+    justify-content: space-between;
+}
 
+.link {
+    color:#252934;
+    font-size: 1.4rem;
+    text-decoration: none;
+    transition: 200ms;
+    cursor: pointer;
+}
+
+.link:hover {
+    color: #f300b4;
 }
