--- a/src/routes/Game/routes/BoardPage/component/ArrowChoise/style.module.css
+++ b/src/routes/Game/routes/BoardPage/component/ArrowChoise/style.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    translateY: -50%;
+    translate: -50%;
     margin: -60px 0 0 -60px;
     width: 0;
     height: 0;
