--- a/src/components/Layout/style.module.css
+++ b/src/components/Layout/style.module.css
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 20px;
 }
 
 .root .title h3 {
@@ -35,7 +36,7 @@
     background: #f300b4;
     width: 150px;
     height: 2px;
-    margin: 1rem 0;
+    margin: 0.5rem 0.5rem;
     padding: 0;
 }
 
